# driverless-car

./: .gitignore  GIẢI PHÁP ĐIỀU KHIỂN XE KHÔNG NGƯỜI LÁI.docx  README.md  driverless-car.sln  sample-PARAMS.yaml
Classes/: BoundariesJudge.h  CarController.cpp  Evaluator.cpp  Include.h  Params.cpp  Params.h
Classes/analyzer/: Analyzer.cpp  RoadInfo.cpp
Classes/calculator/: Calculator.cpp  Calculator.h  EdgeDetector.cpp  EdgeDetector.h  Formatter.cpp  Formatter.h  FrameInfo.cpp  FrameInfo.h  JoinerSplitter.cpp  Line.h  LineDetector.cpp  LineDetector.h  LineInfo.h
Classes/collector/: Collector.cpp  Collector.h  RawContent.cpp  RawContent.h
Classes/driver/: Car.cpp  Driver.cpp  (+1 more)
Data/: exam-params.yaml  params-sample-4.yaml  params-video-1.yaml  params-video-2.yaml  sample-PARAMS.yaml
Linux/: .gitignore  CMakeLists.txt
Linux/lane_detection/: CMakeLists.txt
Linux/main_pid/: Main.cpp  automaticCar.cpp
Linux/peripheral_driver/i2c/: CMakeLists.txt
Linux/peripheral_driver/uart/: CMakeLists.txt
Linux/seboys/: Params.cpp  Params.h  Timer.h
Linux/seboys/analyzer/: Analyzer.cpp  Analyzer.h  RoadInfo.cpp  RoadInfo.h
Linux/seboys/calculator/: Calculator.cpp  Calculator.h  EdgeDetector.cpp  EdgeDetector.h  Formatter.cpp  Formatter.h  FrameInfo.cpp  FrameInfo.h  JoinerSplitter.cpp  JoinerSplitter.h  Line.cpp  Line.h  LineDetector.cpp  LineDetector.h  LineInfo.cpp  LineInfo.h  Section.cpp  Section.h
Linux/seboys/collector/: Collector.cpp  Collector.h  RawContent.cpp  RawContent.h
Linux/seboys/device/: SeboyDriver.cpp  SeboyDriver.h
Linux/seboys/driver/: Car.cpp  Car.h  Driver.cpp  Driver.h
Linux/stereo_vision/: CMakeLists.txt
Windows/: driverless-car.sln
analyzer/: BoundariesJudge.cpp  CarController.h  EdgeDetector.h  Evaluator.h  FrameInfo.h  Include.h  JoinerSplitter.h  Line.cpp  Line.h  LineDetector.h  Main.cpp  analyzer.vcxproj  analyzer.vcxproj.filters
calculator/: Main.cpp  calculator.vcxproj  calculator.vcxproj.filters
collector/: Main.cpp  collector.vcxproj  collector.vcxproj.filters
controller/: controller.vcxproj
driver/: Main.cpp  driver.vcxproj.filters
driverless-car/: Main.cpp  driverless-car.vcxproj  driverless-car.vcxproj.filters
warper/: Main.cpp  warper.vcxproj
(+70 files in other folders)
